[tool.poetry]
name = "yolo-example"
version = "0.1.0"
description = ""
authors = ["Raphael MANSUY <raphael.mansuy.partner@decathlon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
